--- a/frontend/src/css/MenuSection.css
+++ b/frontend/src/css/MenuSection.css
@@ -39,7 +39,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1349px) 
+@media only screen and (min-width: 768px) and (max-width: 1350px) 
 {
   .menu-section
   {
@@ -59,5 +59,10 @@
   {
     grid-template-columns: 150px minmax(auto, 900px) 150px;
     margin-top: 55px;
+  }
+
+  .cart-preview
+  {
+    display: block;
   }
 }
